examples/compiler_errors/adversarial/common_dev_mistakes/UnknownEffectOpTypo.flx
// expect: compile_error
// expect-error: E404

effect Console {
    print: String -> Unit
}

fn bad() -> Unit with Console {
    perform Console.prnit("x")
}
